--- a/src/components/GalleryItem.css
+++ b/src/components/GalleryItem.css
@@ -1,8 +1,12 @@
 .block{
     margin: 10px;
-    width: 275px;
-    height: 220px;
-    background-color: #ccb491;
+    width: 285px;
+    height: 500px;
+    background-color: white;
+    border-radius: 15px;
+}
+.image{
+    padding: 5px;
 }
 .info{
     padding:5px 15px 15px 15px;
