--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,28 @@
   src: url(https://fonts.gstatic.com/s/jacquesfrancoisshadow/v21/KR1FBtOz8PKTMk-kqdkLVrvR0ECFrB6Pin-2_p8Suno.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+h1{
+  margin: 100px 0 20px 220px;
+  /* margin-left:200px; */
+  /* color:burlywood;
+  text-shadow: 0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(0,0,0,.7); */
+  -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: white;
+    text-shadow:
+    /* White glow */
+    0 0 7px #FFD700,
+    0 0 10px #FFD700,
+    0 0 21px #FFD700,
+    /* Green glow */
+    0 0 42px #f09,
+    0 0 82px #f09,
+    0 0 92px #f09,
+    0 0 102px #f09,
+    0 0 151px #f09;
+}
 .App {
   margin-left: 5%;
   margin-right: 5%;
@@ -23,15 +45,49 @@
   font-family: 'Jacques Francois';
   /* 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif */
 }
-.main-grid{
+/* .main-grid{
   display:grid;
   grid-template-columns: 1fr 4fr;
-}
+} */
 .gallery{
+  margin-left: 200px;
   display: flex;
   flex-wrap:wrap;
   justify-content: left;
 }
 .side-bar-label:link{
   color:red;
+}
+legend {
+  font-weight: bold;
+  padding: 5px 0 5px;
+}
+.side-bar{
+  color: black;
+  background-color: white;
+  height:fit-content;
+  padding: 15px;
+  position:fixed;
+  border-radius: 15px;
+  box-shadow: 0 5px 15px black;
+}
+button {
+  font-family: 'Jacques Francois';
+  border: none;
+  padding: 5px 15px;
+  border-radius: 15px;
+  background-color: burlywood;
+  color: black;
+}
+button:hover{
+  color:black;
+  background-color:#FFD700;
+  box-shadow: 0 5px 15px gray;
+}
+.add {
+  /* color:black; */
+  background-color: burlywood;
+}
+.rem {
+  background-color: #FFD700;
 }
