--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(202, 191, 167);
+  background: url('https://www.myfreetextures.com/wp-content/uploads/2014/10/texture-seamless-wood-5.jpg') top right;
+  background-attachment: fixed;
+  background-size:cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
